--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Richie!</title>
+  <title>MBA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/assets/img/iconpng.png">
@@ -11,39 +11,6 @@
   <style>
     html,
     body {
-      margin: 0;
-      height: 100%;
-    }
-    
-    .todo {
-      margin: 0;
-      height: 100%;
-    }
-    .carousel-inner {
-      margin: 0;
-      height: 100%;
-    }
-    .carousel-item {
-      margin: 0;
-      height: 100%;
-      /* Force to always be block */
-      display: block !important;
-      z-index: 1;
-      position: absolute;
-      opacity: 0;
-      transition: all 0.2s;
-      visibility: hidden;
-    }
-    .carousel-item.active {
-      margin: 0;
-      height: 100%;
-      position: relative;
-      transform: translateX(0);
-      transition: all 0.4s;
-      visibility: visible;
-      opacity: 1;
-    }
-    .carousel {
       margin: 0;
       height: 100%;
     }
