--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       height: 100%;
     }
   </style>
-<link rel="stylesheet" href="styles.84ee0ef0b8984dcdd98b.css"></head>
+</head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.f4b78b65941f8063fd57.js"></script><script type="text/javascript" src="scripts.e6e4264da32586f9bb57.js"></script><script type="text/javascript" src="main.1d90312f3a1c6d49f53e.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 
 </html>
 <!--.-->
